# financas-api

./: .gitignore  Makefile  README.md  database.dbml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: smokeshow.yml  tests.yml
app/: main.py
app/core/: database.py  settings.py
app/models/: __init__.py  accounts.py  mixins.py
app/routes/: accounts.py
app/schemas/: accounts.py
app/utils/: database.py  messages.py
migrations/: env.py
migrations/versions/: 25594e055024_add_default_value_for_balance_column_of_.py  786f3cf36865_correcting_the_default_value_in_the_.py  a5fd2af89cef_create_accounts_table.py
tests/: conftest.py  factories.py
tests/integration/: test_accounts_db.py  test_accounts_route.py
tests/unit/: test_health.py
